# cofrics

./: LICENSE  README.md  README_CN.md  pyproject.toml
.github/workflows/: formatting.yml  tests.yml
cofrics/: __init__.py  deprecate.py  perf_attrib.py  stats.py  utils.py
tests/: test_perf_attrib.py  test_stats.py  test_utils.py
