[project]
name = "cofrics"
version = "0.1.0"
description = ""
authors = [
    {name = "jiaxw",email = "jiaxw@yh-capital.cn"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pandas>=2.0.0", 
    "numpy>=1.26.0",
    "scipy>=1.15.2",
    "ipython>=8.0.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.1.2"
isort = "^6.0.1"
